<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
        <relativePath/>
    </parent>

    <groupId>ai.openclaw</groupId>
    <artifactId>openclaw</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>OpenClaw Java</name>
    <description>OpenClaw Java Edition - AI Agent Platform</description>

    <properties>
        <revision>2026.3.14-SNAPSHOT</revision>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-ai.version>1.1.2</spring-ai.version>
        <jackson.version>2.16.0</jackson.version>
        <junit-jupiter.version>5.14.3</junit-jupiter.version>
        <reactor.version>3.8.4</reactor.version>
        <reactor-netty.version>1.3.4</reactor-netty.version>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
    </properties>

    <modules>
        <module>openclaw-plugin-sdk</module>
        <module>openclaw-gateway</module>
        <module>openclaw-server</module>
        <module>openclaw-agent</module>
        <module>openclaw-channel-telegram</module>
        <module>openclaw-channel-feishu</module>
        <module>openclaw-channel-discord</module>
        <module>openclaw-channel-slack</module>
        <module>openclaw-tools</module>
        <module>openclaw-memory</module>
        <module>openclaw-security</module>
        <module>openclaw-secrets</module>
        <module>openclaw-cli</module>
        <module>openclaw-cron</module>
        <module>openclaw-browser</module>
        <module>openclaw-session</module>
        <module>openclaw-provider-brave</module>
        <module>openclaw-provider-perplexity</module>
        <module>openclaw-provider-google</module>
        <module>openclaw-lsp</module>
        <!-- <module>openclaw-desktop</module> -->
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring AI -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- JUnit Jupiter -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Validation -->
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>8.0.1.Final</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.9</version>
            </dependency>

            <!-- Project Reactor -->
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>${reactor.version}</version>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-test</artifactId>
                <version>${reactor.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.projectreactor.netty</groupId>
                <artifactId>reactor-netty</artifactId>
                <version>${reactor-netty.version}</version>
            </dependency>

            <!-- OpenClaw Modules -->
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-plugin-sdk</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-gateway</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-server</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-agent</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-channel-telegram</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-channel-feishu</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-channel-discord</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-channel-slack</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-tools</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-memory</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-security</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-secrets</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-cli</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-cron</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-browser</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-session</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-provider-brave</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-provider-perplexity</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-provider-google</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ai.openclaw</groupId>
                <artifactId>openclaw-lsp</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Flatten Maven Plugin for CI-friendly versioning -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
